# backend/pkg/generated/goclient/model_analyze_disbalance_request.go
@@ -1,0 +1,187 @@
+/*
+Geek Budget - OpenAPI 3.0
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 0.0.1
+Contact: ilya.korolev@outlook.com
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package goclient
+
+import (
+	"bytes"
+	"encoding/json"
+	"fmt"
+
+	"github.com/shopspring/decimal"
+)
+
+// checks if the AnalyzeDisbalanceRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &AnalyzeDisbalanceRequest{}
+
+// AnalyzeDisbalanceRequest struct for AnalyzeDisbalanceRequest
+type AnalyzeDisbalanceRequest struct {
+	CurrencyId  string          `json:"currencyId"`
+	TargetDelta decimal.Decimal `json:"targetDelta"`
+}
+
+type _AnalyzeDisbalanceRequest AnalyzeDisbalanceRequest
+
+// NewAnalyzeDisbalanceRequest instantiates a new AnalyzeDisbalanceRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewAnalyzeDisbalanceRequest(currencyId string, targetDelta decimal.Decimal) *AnalyzeDisbalanceRequest {
+	this := AnalyzeDisbalanceRequest{}
+	this.CurrencyId = currencyId
+	this.TargetDelta = targetDelta
+	return &this
+}
+
+// NewAnalyzeDisbalanceRequestWithDefaults instantiates a new AnalyzeDisbalanceRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewAnalyzeDisbalanceRequestWithDefaults() *AnalyzeDisbalanceRequest {
+	this := AnalyzeDisbalanceRequest{}
+	return &this
+}
+
+// GetCurrencyId returns the CurrencyId field value
+func (o *AnalyzeDisbalanceRequest) GetCurrencyId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.CurrencyId
+}
+
+// GetCurrencyIdOk returns a tuple with the CurrencyId field value
+// and a boolean to check if the value has been set.
+func (o *AnalyzeDisbalanceRequest) GetCurrencyIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.CurrencyId, true
+}
+
+// SetCurrencyId sets field value
+func (o *AnalyzeDisbalanceRequest) SetCurrencyId(v string) {
+	o.CurrencyId = v
+}
+
+// GetTargetDelta returns the TargetDelta field value
+func (o *AnalyzeDisbalanceRequest) GetTargetDelta() decimal.Decimal {
+	if o == nil {
+		var ret decimal.Decimal
+		return ret
+	}
+
+	return o.TargetDelta
+}
+
+// GetTargetDeltaOk returns a tuple with the TargetDelta field value
+// and a boolean to check if the value has been set.
+func (o *AnalyzeDisbalanceRequest) GetTargetDeltaOk() (*decimal.Decimal, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.TargetDelta, true
+}
+
+// SetTargetDelta sets field value
+func (o *AnalyzeDisbalanceRequest) SetTargetDelta(v decimal.Decimal) {
+	o.TargetDelta = v
+}
+
+func (o AnalyzeDisbalanceRequest) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o AnalyzeDisbalanceRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["currencyId"] = o.CurrencyId
+	toSerialize["targetDelta"] = o.TargetDelta
+	return toSerialize, nil
+}
+
+func (o *AnalyzeDisbalanceRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"currencyId",
+		"targetDelta",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varAnalyzeDisbalanceRequest := _AnalyzeDisbalanceRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varAnalyzeDisbalanceRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = AnalyzeDisbalanceRequest(varAnalyzeDisbalanceRequest)
+
+	return err
+}
+
+type NullableAnalyzeDisbalanceRequest struct {
+	value *AnalyzeDisbalanceRequest
+	isSet bool
+}
+
+func (v NullableAnalyzeDisbalanceRequest) Get() *AnalyzeDisbalanceRequest {
+	return v.value
+}
+
+func (v *NullableAnalyzeDisbalanceRequest) Set(val *AnalyzeDisbalanceRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableAnalyzeDisbalanceRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableAnalyzeDisbalanceRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableAnalyzeDisbalanceRequest(val *AnalyzeDisbalanceRequest) *NullableAnalyzeDisbalanceRequest {
+	return &NullableAnalyzeDisbalanceRequest{value: val, isSet: true}
+}
+
+func (v NullableAnalyzeDisbalanceRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableAnalyzeDisbalanceRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
