# backend/pkg/generated/goserver/model_analyze_disbalance_request.go
@@ -1,0 +1,54 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Geek Budget - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"github.com/shopspring/decimal"
+)
+
+type AnalyzeDisbalanceRequest struct {
+	CurrencyId string `json:"currencyId"`
+
+	TargetDelta decimal.Decimal `json:"targetDelta"`
+}
+
+type AnalyzeDisbalanceRequestInterface interface {
+	GetCurrencyId() string
+	GetTargetDelta() decimal.Decimal
+}
+
+func (c *AnalyzeDisbalanceRequest) GetCurrencyId() string {
+	return c.CurrencyId
+}
+func (c *AnalyzeDisbalanceRequest) GetTargetDelta() decimal.Decimal {
+	return c.TargetDelta
+}
+
+// AssertAnalyzeDisbalanceRequestRequired checks if the required fields are not zero-ed
+func AssertAnalyzeDisbalanceRequestRequired(obj AnalyzeDisbalanceRequest) error {
+	elements := map[string]interface{}{
+		"currencyId":  obj.CurrencyId,
+		"targetDelta": obj.TargetDelta,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertAnalyzeDisbalanceRequestConstraints checks if the values respects the defined constraints
+func AssertAnalyzeDisbalanceRequestConstraints(obj AnalyzeDisbalanceRequest) error {
+	return nil
+}
