# backend/pkg/generated/goserver/model_disbalance_analysis.go
@@ -1,0 +1,71 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Geek Budget - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"github.com/shopspring/decimal"
+)
+
+type DisbalanceAnalysis struct {
+	Delta decimal.Decimal `json:"delta"`
+
+	TransactionCount int32 `json:"transactionCount"`
+
+	Candidates []DisbalanceCandidate `json:"candidates"`
+}
+
+type DisbalanceAnalysisInterface interface {
+	GetDelta() decimal.Decimal
+	GetTransactionCount() int32
+	GetCandidates() []DisbalanceCandidate
+}
+
+func (c *DisbalanceAnalysis) GetDelta() decimal.Decimal {
+	return c.Delta
+}
+func (c *DisbalanceAnalysis) GetTransactionCount() int32 {
+	return c.TransactionCount
+}
+func (c *DisbalanceAnalysis) GetCandidates() []DisbalanceCandidate {
+	return c.Candidates
+}
+
+// AssertDisbalanceAnalysisRequired checks if the required fields are not zero-ed
+func AssertDisbalanceAnalysisRequired(obj DisbalanceAnalysis) error {
+	elements := map[string]interface{}{
+		"delta":            obj.Delta,
+		"transactionCount": obj.TransactionCount,
+		"candidates":       obj.Candidates,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	for _, el := range obj.Candidates {
+		if err := AssertDisbalanceCandidateRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertDisbalanceAnalysisConstraints checks if the values respects the defined constraints
+func AssertDisbalanceAnalysisConstraints(obj DisbalanceAnalysis) error {
+	for _, el := range obj.Candidates {
+		if err := AssertDisbalanceCandidateConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
