# backend/pkg/generated/goserver/model_disbalance_candidate.go
@@ -1,0 +1,78 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Geek Budget - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"github.com/shopspring/decimal"
+)
+
+type DisbalanceCandidate struct {
+	Transactions []DisbalanceCandidateTransaction `json:"transactions"`
+
+	Sum decimal.Decimal `json:"sum"`
+
+	Difference decimal.Decimal `json:"difference"`
+
+	Type string `json:"type"`
+}
+
+type DisbalanceCandidateInterface interface {
+	GetTransactions() []DisbalanceCandidateTransaction
+	GetSum() decimal.Decimal
+	GetDifference() decimal.Decimal
+	GetType() string
+}
+
+func (c *DisbalanceCandidate) GetTransactions() []DisbalanceCandidateTransaction {
+	return c.Transactions
+}
+func (c *DisbalanceCandidate) GetSum() decimal.Decimal {
+	return c.Sum
+}
+func (c *DisbalanceCandidate) GetDifference() decimal.Decimal {
+	return c.Difference
+}
+func (c *DisbalanceCandidate) GetType() string {
+	return c.Type
+}
+
+// AssertDisbalanceCandidateRequired checks if the required fields are not zero-ed
+func AssertDisbalanceCandidateRequired(obj DisbalanceCandidate) error {
+	elements := map[string]interface{}{
+		"transactions": obj.Transactions,
+		"sum":          obj.Sum,
+		"difference":   obj.Difference,
+		"type":         obj.Type,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	for _, el := range obj.Transactions {
+		if err := AssertDisbalanceCandidateTransactionRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertDisbalanceCandidateConstraints checks if the values respects the defined constraints
+func AssertDisbalanceCandidateConstraints(obj DisbalanceCandidate) error {
+	for _, el := range obj.Transactions {
+		if err := AssertDisbalanceCandidateTransactionConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
