# backend/pkg/generated/goserver/model_disbalance_candidate_transaction.go
@@ -1,0 +1,70 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Geek Budget - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"time"
+
+	"github.com/shopspring/decimal"
+)
+
+type DisbalanceCandidateTransaction struct {
+	Id string `json:"id"`
+
+	Date time.Time `json:"date"`
+
+	Description string `json:"description"`
+
+	Amount decimal.Decimal `json:"amount"`
+}
+
+type DisbalanceCandidateTransactionInterface interface {
+	GetId() string
+	GetDate() time.Time
+	GetDescription() string
+	GetAmount() decimal.Decimal
+}
+
+func (c *DisbalanceCandidateTransaction) GetId() string {
+	return c.Id
+}
+func (c *DisbalanceCandidateTransaction) GetDate() time.Time {
+	return c.Date
+}
+func (c *DisbalanceCandidateTransaction) GetDescription() string {
+	return c.Description
+}
+func (c *DisbalanceCandidateTransaction) GetAmount() decimal.Decimal {
+	return c.Amount
+}
+
+// AssertDisbalanceCandidateTransactionRequired checks if the required fields are not zero-ed
+func AssertDisbalanceCandidateTransactionRequired(obj DisbalanceCandidateTransaction) error {
+	elements := map[string]interface{}{
+		"id":          obj.Id,
+		"date":        obj.Date,
+		"description": obj.Description,
+		"amount":      obj.Amount,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertDisbalanceCandidateTransactionConstraints checks if the values respects the defined constraints
+func AssertDisbalanceCandidateTransactionConstraints(obj DisbalanceCandidateTransaction) error {
+	return nil
+}
